# amd-hackathon-project

./: .gitignore  README.md  pyproject.toml  run-dev.sh
.github/workflows/: publish-backend.yml  python-publish.yml
backend/: .env.example  GEMINI_INTEGRATION.md  GEMINI_SETUP.md  OAI_CONFIG_LIST.example.json  README.md  pyproject.toml
backend/agentcad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/agentcad_backend/: __init__.py  cli.py  config.py  db.py  main.py  models.py  routes.py  schemas.py
backend/agentcad_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/agentcad_backend/services/: __init__.py  animation_agent.py  cadquery_agent.py  cadquery_exporter.py  cadquery_parser.py
backend/app/: cli.py  config.py  db.py  llm_config.py  main.py  models.py  routes.py  schemas.py
backend/app/services/: animation_agent.py  cadquery_agent.py  step_video_renderer.py  step_video_worker.py  video_storage.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: ComponentTree.tsx  DesignChatOverlay.tsx  DetailPanel.tsx  JobsDashboard.tsx  ObjectHistory.tsx  PromptComposer.tsx  ShowroomPanel.tsx  ShowroomScene.tsx  StepViewer.tsx  VersionSwitcherOverlay.tsx
