[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcad-backend"
version = "0.1.0"
description = "AG2-powered CadQuery generation backend"
requires-python = ">=3.11"
dependencies = [
  "ag2[openai]>=0.9.0",
  "cadquery>=2.5.0",
  "fastapi>=0.115.0",
  "pillow>=10.4.0",
  "python-multipart>=0.0.9",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["app", "app.services"]
