[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcad-backend"
version = "0.1.2"
description = "AG2-powered CadQuery generation backend"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [
  { name = "AgentCAD contributors" },
]
keywords = ["cadquery", "fastapi", "cad", "ag2", "agentcad"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "ag2[openai]>=0.9.0",
  "cadquery>=2.5.0",
  "fastapi>=0.115.0",
  "pillow>=10.4.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
agentcad-backend = "agentcad_backend.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "twine>=5.1.1",
]

[tool.setuptools]
packages = ["agentcad_backend", "agentcad_backend.services"]
